--- a/day5/deno.json
+++ b/day5/deno.json
@@ -1,5 +1,6 @@
 {
   "tasks": {
-    "run": "deno run --allow-read=./ main.js"
+    "run1": "deno run --allow-read=./ part1.js",
+    "run2": "deno run --allow-read=./ part2.js"
   }
 }
